fix bg and horizontal scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body, html {
     background-image: linear-gradient(rgb(6, 242, 171), rgb(14, 240, 240));
     width: 100%;
+    height: 100%;
     touch-action: manipulation;
 }
 
